--- a/2017310895/titanic_explore.ipynb
+++ b/2017310895/titanic_explore.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -94,6 +96,14 @@
    "source": [
     "sns.set_style(\"darkgrid\", {\"axes.facecolor\": \".2\",\"grid.color\":\".5\"})\n",
     "print(sinplot())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面都是一些对Seaborn的探索\n",
+    "========"
    ]
   },
   {
@@ -297,6 +307,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以上是对缺失值的插补\n",
+    "=="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -316,7 +334,6 @@
     "fig,axes=plt.subplots(1,3)\n",
     "sns.distplot(titanic[\"age\"],ax=axes[0])\n",
     "sns.boxplot(titanic[\"age\"],ax=axes[1])\n",
-    "sns.\n",
     "plt.show()"
    ]
   },
@@ -325,6 +342,27 @@
    "metadata": {},
    "source": [
     "可以发现年龄主要集中在20-40岁之间"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(inx):\n",
+    "    return 1/(1+exp(-inx))"
    ]
   },
   {
