--- a/2021spring/2018312303/jieba.ipynb
+++ b/2021spring/2018312303/jieba.ipynb
@@ -27,26 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['盖', '里奇', '已经', '彻底', '放弃', '讲', '多线', '汇集', '的', '故事', '了', '，', '或者', '不屑于', '玩', '了', '？', '我', '觉得', '这部', '还', '挺', '适合', '改', '的', '啊', '。', '现在', '就是', '一个', '非常简单', '的', '复仇', '故事', '，', '拍', '得', '还是', '比', '常规', '流水线', '作业', '吸引', '人', '一些', '，', '配乐', '和', '音效', '突出', '惊悚', '感'], ['看', '完', '以后', '很', '想', '学', '大提琴', '…', '典型', '的', '咚咚', '咚咚', '的', '爽片'], ['当', 'H', '的', '真实', '身份', '成', '谜', '时', '，', '父亲', '也许', '是', '观众', '最', '能', '共情', '的', '依靠', '点', '。', '影片', '的', '第一', '小节', '有', '两个', '值得注意', '的', '地方', '，', '第一场', '是', '警察', '调查', '劫', '钞', '案', '，', '向', 'H', '出示', '监控', '录像', '；', '第二', '是', 'H', '拿到', '尸检', '报告', '独自', '坐在', '床边', '。', '两场', '戏', '都', '极为', '压抑', '，', '尤其', '是', '第二场', '，', 'H', '完全', '以', '背影', '示众', '，', '但', '却', '完全', '能', '让', '人', '感受', '到', '他', '即将', '喷薄而出', '的', '怒火', '。'], ['今年', '海外', '引进', '影片', '的', '排片', '大量', '缩水', '，', '所以', '能', '在', '第一', '时间', '欣赏', '到', '鬼才', '导演', '盖', '里奇', '的', '这部', '新片', '还是', '挺', '意外', '的', '。', '毕竟', '之前', '他', '的', '电影', '《', '绅士', '们', '》', '几乎', '嘲讽', '了', '所有', '地球', '人', '。']]\n",
-      "(0, '0.045*\"的\" + 0.035*\"，\" + 0.022*\"。\" + 0.016*\"了\"')\n",
-      "(1, '0.044*\"的\" + 0.030*\"，\" + 0.019*\"。\" + 0.018*\"H\"')\n"
+      "(0, '0.018*\"典型\" + 0.018*\"影片\" + 0.017*\"很\" + 0.017*\"学\"')\n",
+      "(1, '0.026*\"故事\" + 0.021*\"影片\" + 0.017*\"电影\" + 0.017*\"毕竟\"')\n"
      ]
     }
    ],
    "source": [
+    "flags = ('n', 'nr', 'ns', 'nt', 'eng', 'v', 'd')  # 词性\n",
+    "stopwords = ('的','H','能','人','盖','是','到','想','挺','完') \n",
     "words_ls = []\n",
     "for text in data:\n",
-    "    words = [word.word for word in jp.cut(text)]\n",
+    "    words = [word.word for word in jp.cut(text)if word.flag in flags and word.word not in stopwords]\n",
     "    words_ls.append(words)\n",
     "jieba.analyse.set_stop_words('stopwords.txt')\n",
-    "print(words_ls)\n",
+    "\n",
     "#去重，存到字典\n",
     "dictionary = corpora.Dictionary(words_ls)\n",
     "#print(dictionary)\n",
